# plasma-framework

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  ExtraDesktop.sh  FindPlasma.cmake  KF5PlasmaConfig.cmake.in  KF5PlasmaMacros.cmake  KF6PlasmaConfig.cmake.in  KF6PlasmaMacros.cmake  Mainpage.dox  Makefile.am  Messages.sh  PlasmaConfig.cmake.in  PlasmaMacros.cmake  README  README.md  abstractdialogmanager.cpp  abstractdialogmanager.h  abstractrunner.cpp  abstractrunner.h  abstracttoolbox.cpp  abstracttoolbox.h  accessappletjob.cpp  accessappletjob.h  accessmanager.cpp  accessmanager.h  animationdriver.cpp  animationdriver.h  animator.cpp  animator.h  appinterface.cpp  appinterface.h  applet.cpp  applet.h  (+178 more)
air/: CMakeLists.txt  colors  metadata.desktop
air/dialogs/: background.svgz  kickoff.svgz  krunner.svgz  shutdowndialog.svgz
air/icons/: audio.svgz  battery.svgz  bluetoth.svgz  device.svgz  kget.svgz  klipper.svgz  kpackagekit.svgz  krandr.svgz  kttsd.svgz  kwalletmanager.svgz  nepomuk.svgz  network.svgz  notification.svgz  preferences.svgz  quassel.svgz  wallet.svgz
air/toolbar-icons/: media.svgz  window.svgz
air/widgets/: action-overlays.svgz  actionbutton.svgz  analog_meter.svgz  arrows.svgz  background.svgz  bar_meter_horizontal.svgz  bar_meter_vertical.svgz  busywidget.svgz  button.svgz  calendar.svgz  clock.svgz  configuration-icons.svgz  containment-controls.svgz  extender-background.svgz  extender-dragger.svgz  frame.svgz  glowbar.svgz  identiconshapes.svgz  identicontheme.svgz  labeltexture.svgz  line.svgz  lineedit.svgz  listitem.svgz  media-delegate.svgz  monitor.svgz  notifications.svgz  pager.svgz  panel-background.svgz  picture-delegate.svgz  plot-background.svgz  (+10 more)
autotests/: CMakeLists.txt  TODO  configloadertest.cpp  configloadertest.h  configmodeltest.cpp  configmodeltest.h  coronatest.cpp  coronatest.h  coronatestresources.qrc  dialognativetest.cpp  dialognativetest.h  dialogqmltest.cpp  dialogqmltest.h  dialogstatetest.cpp  dialogstatetest.h  dialogtest.cpp  dialogtest.h  dummycontainmentaction.cpp  dummycontainmentaction.json  dynamictreemodel.cpp  dynamictreemodel.h  fallbackpackagetest.cpp  fallbackpackagetest.h  framesvgtest.cpp  framesvgtest.h  i18ndcheck.sh  iconitemhidpitest.cpp  iconitemtest.cpp  iconitemtest.h  modeltest.cpp  modeltest.h  packagemetadatatest.desktop  packagestructuretest.cpp  packagestructuretest.h  packageurlinterceptortest.cpp  packageurlinterceptortest.h  plasma-test-appletsrc  plasmoidpackagetest.cpp  plasmoidpackagetest.h  pluginloadertest.cpp  (+14 more)
declarativeimports/: CMakeLists.txt
examples/: CMakeLists.txt  TODO
kdm/: CMakeLists.txt  Messages.sh  kgreet_classic.cpp  kgreet_classic.h  kgreet_generic.cpp  kgreet_generic.h  kgreet_winbind.cpp  kgreet_winbind.h  kgreeterplugin.h
kpart/: CMakeLists.txt  README  kpart.kdev4  plasma-kpart.desktop  plasmakpart.cpp  plasmakpart.h  plasmakpartcorona.cpp  plasmakpartcorona.h  plasmakpartview.cpp  plasmakpartview.h
ksysguard/: CMakeLists.txt
kworkspace/: CMakeLists.txt  kdisplaymanager.cpp  kdisplaymanager.h  kwindowlistmenu.cpp  kwindowlistmenu.h  kworkspace.cpp  kworkspace.h  kworkspace_p.h
libplasmaclock/: CMakeLists.txt  Messages.sh  calendar.cpp  calendar.h  calendar.ui  calendartable.cpp  calendartable.h  clockapplet.cpp  clockapplet.h  clocknumber.cpp  clocknumber.h  plasmaclock_export.h  timezonesConfig.ui  toolbutton.cpp  toolbutton.h
nepomukquery/: CMakeLists.txt  Messages.sh  dbusoperators.cpp  dbusoperators.h  nepomukquery_export.h  query.cpp  query.h  queryparser.cpp  queryparser.h  qurlhash.h  result.cpp  result.h  term.cpp  term.h
nepomukqueryclient/: CMakeLists.txt  nepomukqueryclient_export.h  org.kde.nepomuk.Query.xml  org.kde.nepomuk.QueryService.xml  querymetatype.h  queryserviceclient.cpp  queryserviceclient.h
oxygen/: CMakeLists.txt  metadata.desktop
plasma/: CMakeLists.txt  Mainpage.dox  Messages.sh  abstractdialogmanager.cpp  abstractdialogmanager.h  abstractrunner.cpp  applet.cpp  applet.h  containment.cpp  containment.h  containmentactions.cpp  containmentactionspluginsconfig.cpp  containmentactionspluginsconfig.h  corona.cpp  corona.h  datacontainer.cpp  datacontainer.h  dataengine.cpp  dataengine.h  dataengineconsumer.cpp  dataengineconsumer.h  extender.h  framesvg.h  package.cpp  packagestructure.h  paintutils.h  plasma.h  pluginloader.cpp  pluginloader.h  querymatch.h  runnercontext.cpp  runnermanager.cpp  service.cpp  service.h  servicejob.cpp  servicejob.h  svg.cpp  svg.h  theme.cpp  theme.h  (+1 more)
remotewidgetshelper/: CMakeLists.txt  kcm_remotewidgets.actions  remotewidgetshelper.cpp
src/: CMakeLists.txt  Messages.sh
taskmanager/: CMakeLists.txt  Messages.sh  abstractgroupableitem.cpp  abstractgroupableitem.h  abstractgroupingstrategy.cpp  abstractgroupingstrategy.h  abstractsortingstrategy.cpp  abstractsortingstrategy.h  groupmanager.cpp  groupmanager.h  startup.cpp  startup.h  task.cpp  task.h  taskactions.cpp  taskactions.h  taskactions_p.h  taskgroup.cpp  taskgroup.h  taskitem.cpp  taskitem.h  taskmanager.cpp  taskmanager.h  taskmanager_export.h  taskmanager_p.h  taskrmbmenu.cpp  taskrmbmenu.h
tests/: CMakeLists.txt  Makefile.am  TODO  appletbrowser.cpp  buttons_pc3.0.qml  colorcontext.qml  configloadertest.cpp  configloadertest.h  dialog.qml  dialog_fullscreen.qml  dialog_minWidthHeightRepositioning.qml  dialog_positioning.qml  dialog_positioning2.qml  dialog_positioning_parentrotated.qml  dialog_resizeWithParent.qml  dialog_sizeMoreThanMin.qml  dialog_tooltip.qml  dialog_visualParentChange.qml  frames.qml  nativeApplet.desktop  packagemetadatatest.cpp  packagemetadatatest.desktop  packagemetadatatest.h  packagestructuretest.cpp  packagestructuretest.h  plasmoidpackagetest.cpp  plasmoidpackagetest.h  plotter.qml  runnercontexttest.cpp  runnercontexttest.h  selected_svg.qml  shadows.qml  sharedtimertest.cpp  signingtest.cpp  signingtest.h  storagetest.cpp  storagetest.h  testAppletInfo.cpp  testAppletInfo.h  testborders.qml  (+4 more)
(+3248 files in other folders)
